<resources>
    <string name="app_name">IntiMex</string>
    <string name="info_logo">Este es el logo de la aplicación Lyfecycle</string>
    <string name="label_btn_registrar_producto">Registrar Producto</string>
    <string name="label_btn_buscador">Buscador</string>
    <string name="label_btn_contactar">Contactar</string>
    <string name="label_btn_ejemplos">Ejemplos</string>
    <string name="label_info_activity_main">
        Un <b>Intent</b> es un objeto de acción que se usa para solicitar una acción de otro componente de
        la aplicación. Dicho de otra manera, es una intención de hacer algo, como iniciar otra actividad,
        un servicio o entregar un mensaje. Los  Intents también pueden guardar información primitiva de
        utilidad entre la comunicación.
    </string>
    <string name="label_info2_activity_main">

        Los Intents pueden ser <b>implícitos</b> o <b>explícitos</b>. Son explícitos cuando se ejecuta un componente en específico, es decir,
        especifican qué componente se debe iniciar mediante su nombre (el nombre de clase completamente calificado).\n\n
        Usualmente, el usuario usa el intent explícito para iniciar un componente en su propia aplicación porque conoce el nombre
        de clase de la actividad o el servicio que desea iniciar.\n\n
        <b><i> Por ejemplo, se puede utilizar para iniciar una actividad nueva
        en respuesta a una acción del usuario.\n\n</i></b>
        Como ejemplo funcional de un intent Explicito estan los botones anteriores que su función es iniciar una nueva actividad.\n\n
    </string>
    <string name="label_url">Introduce la url donde deseas navegar en la web</string>
    <string name="label_buscar_palabra">Qué palabra buscaras?</string>
    <string name="label_btn_buscar">Buscar</string>
    <string name="hint_url">https://www.develop.com.mx</string>
    <string name="hint_palabra">Buscar Develop talent &amp; technology</string>
    <string name="label_info_actividad_buscador">
        En esta sección se muestran dos ejemplos del uso del intent implicito.\n\n
        <b>Pero que es un intent implicito?</b>\n\n

        Son implícitos cuando se entrega una referencia genérica sobre alguna condición, y aquellas entidades que cumplan ese
        requisito serán presentadas como candidatas para la tarea.\n\n
        A continuación se explicara a mas detalle cada una respectivamente.\n\n
        Es decir, no se nombra el componente específicamente; pero en cambio, se declara una acción general para realizar, lo que permite
        que un componente de otra aplicación la maneje.\n\n

        <b><i>Por ejemplo, si se desea mostrar al usuario una ubicación en un mapa, puede usar un
        intent implícito para solicitar que otra aplicación capaz, muestre una ubicación específica en un mapa.\n\n</i></b>

        Cuando se crea un intent implícito, el sistema Android busca el componente apropiado para iniciar, comparando el contenido del intent
        con los filtros de intents declarados en el archivo de manifiesto de otras aplicaciones en el dispositivo. Si el intent coincide con un
        filtro de intents, el sistema inicia ese componente y le entrega el objeto Intent.\n\n
        Si varios filtros de intents son compatibles, el sistema muestra un cuadro de diálogo para que el usuario pueda elegir la aplicación que se debe usar.\n\n
    </string>
    <string name="label_info_redirigir_web">Si deseas más información sobre la empresa: </string>
    <string name="label_btn_redirigir_web">Ir a Página Web</string>
    <string name="label_info_llamar">Si deseas conversar con un agente de la empresa, pulsa el siguiente botón para iniciar una llamada:</string>
    <string name="label_btn_llamar">LLamar</string>
    <string name="label_info_enviar_email">Si deseas contactar via correo, por favor llena los siguientes campos:</string>
    <string name="label_btn_enviar_email">Enviar correo</string>
    <string name="hint_asunto">Asunto</string>
    <string name="hint_mensaje">Mensaje ...</string>
    <string name="label_info_compartir_datos"><b>Ejemplo 1</b>\nCompartir datos del telefono:</string>
    <string name="hint_datos_compartir">Obten tus datos para compartir</string>
    <string name="label_btn_compartir_datos">Compartir</string>
    <string name="label_btn_obtener_datos">Obtener</string>
    <string name="label_info_mostrar_contactos"><b>Ejemplo 2</b>\nMostrar contactos almacenados en el smarphone:</string>
    <string name="label_btn_mostrar_contactos">Mostrar contactos</string>
    <string name="label_info_mostrar_geolocalizacion"><b>Ejemplo 3</b>\nEste es un ejemplo donde se abre la aplicación de Google Maps para una localización determinada, solo falta que introduzcas los siguientes campos:</string>
    <string name="label_btn_mostrar_geolocalizacion">Mostrar Geolocalización</string>
    <string name="label_info_zoom">Selecciona el zoom para el mapa:</string>
    <string name="label_info_interfaz_llamada">
        <b>Ejemplo 4</b>\nEn este ejemplo se crea un nuevo intent con la acción <b>ACTION_VIEW</b>
        y como datos  se pasara el <i>tel:53952791</i> esto colocará la aplicación en el escenario de llamada
        telefonica para confirmar la llamada al número representado:</string>
    <string name="label_btn_interfaz_llamada">Confirmar llamada</string>
    <string name="label_info_crear_alarma"><b>Ejemplo 5</b>\nCrear una alarma dada una hora especificada:</string>
    <string name="label_btn_crear_alarma">Crear Alarma</string>
    <string name="label_checkbox_vibrar">Vibrar</string>
    <string name="hint_etiqueta">Escribe una Etiqueta</string>
    <string name="label_info_crear_temporizador"><b>Ejemplo 6</b>\nSe creara un temporizador de cuenta regresiva, usa la acción <b>ACTION_SET_TIMER</b>:</string>
    <string name="label_btn_crear_temporizador">Crear Temporizador</string>
    <string name="label_info_mostrar_alarmas"><b>Ejemplo 7</b>\nEn este ejemplo lo que se pretende es mostrar una lista de alarmas, usando la acción <b>ACTION_SHOW_ALARMS</b>.\n\n
        Aunque no muchas aplicaciones invocan este intent <i>(la usan principalmente las aplicaciones del sistema)</i>, cualquier aplicación que se comporte
        como alarma debe implementar este filtro de intents y responder mostrando la lista de alarmas actuales.</string>
    <string name="label_btn_mostrar_alarmas">Mostrar Alarmas</string>
    <string name="label_info_agregar_evento"><b>Ejemplo 8</b>\nEn este ejemplo lo que se pretende es agregar un evento del calendario.\n\n
        Para agregar un evento nuevo al calendario del usuario, usa la acción <b>ACTION_INSERT</b> y especifica el URI de datos con <i>Events.CONTENT_URI</i>.\n\n
        Después se puede especificar diversos detalles del evento con los extras.\n</string>
    <string name="label_btn_agregar_evento">Agregar Evento</string>
    <string name="label_fecha_termino">Selecciona la fecha de termino</string>
    <string name="label_fecha_inicio">Selecciona la fecha de inicio</string>
    <string name="info_agregar_evento">
        Como ya sabes Android permite invocar actividades de otra aplicación con una intención.
        En este ejemplo, se uso la intención apropiada para invocar la aplicación de calendario predeterminada y enviar datos previamente de los detalles del evento.\n\n
        Pero para que funcione, el usuario debe confirmar para agregar el evento, o puede cambiar, editar cualquiera de los detalles asociados con un evento en particular.
        Pero si solo se quiere invocar la aplicación solo necesitara el siguiente fragmento de código:\n\n
        <b><i>Intent i = new Intent(Intent.ACTION_INSERT);\n
        i.setType(\"vnd.android.cursor.dir/event\");\n
        startActivity(i);</i></b>\n\n
        El fragmento anterior invocará la aplicación de calendario con campos vacíos y permitirá al usuario introducir los detalles del evento antes de añadirlos.
        Sin embargo, puede completar previamente los detalles del evento pasando los detalles en forma de extras de intención. Los valores Extras describen los detalles del evento,
        como la hora de inicio del evento, la hora de finalización del evento, el título del evento, la descripción del evento, etc.\n\n

        Las siguientes dos clases son importantes para entender y poder agregar los eventos:\n\n
        <b>CalendarContract</b>:<i> Define el modelo de datos de la información relacionada con el calendario y el evento. Estos datos se almacenan en una serie de tablas, que se enumeran.</i>\n\n
        <b>CalendarContract.Events</b>:<i> Esta tabla contiene la información específica del evento. Cada fila de esta tabla tiene la información de un solo evento, por ejemplo, título del evento, ubicación,
        hora de inicio, hora de finalización, etc. El evento puede ocurrir una sola vez o puede repetirse varias veces.\n\n
        Los asistentes, los recordatorios y las propiedades extendidas se almacenan en tablas separadas. Cada uno de ellos tiene un <b>EVENT_ID</b>  que hace referencia al <b>_ID</b> en la tabla de eventos.</i>
    </string>
    <string name="label_info_imagen_detenida">
        <b>Ejemplo 9</b>\nEn este ejemplo lo que se pretende es abrir una aplicación de cámara en el modo de imagen detenida, para ello se usa la acción <b>INTENT_ACTION_STILL_IMAGE_CAMERA</b>
    </string>
    <string name="label_btn_imagen_detenida">Iniciar modo de imagen detenida</string>
    <string name="label_info_modo_video">
        <b>Ejemplo 10</b>\nEn este ejemplo lo que se pretende es abrir una app de cámara en el modo de video, para ello se usa la acción <b>INTENT_ACTION_VIDEO_CAMERA</b>
    </string>
    <string name="label_btn_modo_video">Iniciar cámara en modo de video</string>
    <string name="label_info_abrir_configuracion">
        <b>Ejemplo 11</b>\nEn este ejemplo lo que se pretende es abrir una pantalla en la configuración del sistema cuando la aplicación requiere que el usuario cambie algo,
        selecciona una de las siguientes acciones de intent para abrir la pantalla de configuración correspondiente al nombre de la acción.
    </string>
    <string name="label_btn_abrir_configuracion">Abrir una sección específica de Settings</string>
    <string name="label_info_insertar_contacto">
        <b>Ejemplo 12</b>\nEn este ejemplo lo que se pretende es insertar un contacto nuevo, lo cual se usa la acción <b>ACTION_INSERT</b> ,
        especifica <i>Contacts.CONTENT_TYPE</i> como el tipo de MIME e incluye cualquier información de contacto conocida en los campos extra especificados
        por las constantes en <i>ContactsContract.Intents.Insert</i> .
    </string>
    <string name="label_btn_insertar_contacto">Insertar contacto</string>
    <string-array name="latitud">
        <item>Selecciona la Latitud</item>
        <item>19.4235017</item>
        <item>19.43478</item>
        <item>19.4282421</item>
        <item>19.3664631</item>
        <item>19.501355</item>
        <item>19.5045672</item>
    </string-array>
    <string name="class_prompt">Selecciona</string>
    <string name="hint_segundos">00</string>
    <string-array name="longitud">
        <item>Selecciona la Longitud</item>
        <item>-99.1564386</item>
        <item>-99.1882478</item>
        <item>-99.2065313</item>
        <item>-99.26439099999999</item>
        <item>-99.13455850000003</item>
        <item>-99.1469098</item>
    </string-array>
    <string-array name="categoria">
        <item>Selecciona la categoria</item>
        <item>Restaurantes</item>
        <item>Escuelas</item>
        <item>Cines</item>
        <item>Bares</item>
        <item>Gimnacios</item>
        <item>Estadios</item>
    </string-array>
</resources>