<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:scrollbars="none"
    tools:context="mx.com.develop.intimex.Activitys.Contactar">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_contactar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_label_info_redirigir_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/separador"
            android:text="@string/label_info_redirigir_web"
            android:textColor="@color/primary_text" />

        <Button
            android:id="@+id/btn_redirigir_web"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/label_btn_redirigir_web" />

        <TextView
            android:id="@+id/tv_label_info_llamar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/separador"
            android:text="@string/label_info_llamar"
            android:textColor="@color/primary_text" />

        <Button
            android:id="@+id/btn_llamar"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/label_btn_llamar" />

        <TextView
            android:id="@+id/tv_label_info_enviar_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/separador"
            android:text="@string/label_info_enviar_email"
            android:textColor="@color/primary_text" />

        <EditText
            android:id="@+id/et_asunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_asunto" />

        <EditText
            android:id="@+id/et_Texto_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mensaje" />

        <Button
            android:id="@+id/btn_enviar_email"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/separador"
            android:text="@string/label_btn_enviar_email" />

    </LinearLayout>
</ScrollView>