<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:scrollbars="none"
    tools:context="mx.com.develop.intimex.Activitys.Buscador">

    <LinearLayout
        android:id="@+id/activity_buscador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_label_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/label_url"
            android:textColor="@color/primary_text" />

        <EditText
            android:id="@+id/et_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_url"
            android:inputType="textUri" />

        <Button
            android:id="@+id/btn_buscar_uri"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawablePadding="8dp"
            android:padding="10dp"
            android:text="@string/label_btn_buscar" />

        <TextView
            android:id="@+id/tv_label_buscar_palabra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/label_buscar_palabra"
            android:textColor="@color/primary_text" />

        <EditText
            android:id="@+id/et_buscar_palabra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_palabra" />

        <Button
            android:id="@+id/btn_buscar_palabra"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/label_btn_buscar" />

        <TextView
            android:id="@+id/tv_label_info_actividad_bucador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/label_info_actividad_buscador"
            android:textColor="@color/primary_text" />

    </LinearLayout>
</ScrollView>